--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rns-manager-react",
   "version": "2.0.0-beta.16",
+  "homepage": "http://manager.developerjesse.com",
   "private": true,
   "dependencies": {
     "@ensdomains/address-encoder": "^0.1.7",
@@ -44,7 +45,9 @@
     "build:mainnet": "env-cmd -f .env.production react-scripts build",
     "test": "node ./tests/setupRnsSuite.js && jest --maxWorkers=4 && eslint src",
     "test:watch": "node ./tests/setupRnsSuite.js && jest --watch",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "predeploy": "env-cmd -f .env.testnet react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -66,6 +69,7 @@
     "eslint-plugin-jest": "^22.7.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "7.14.3",
+    "gh-pages": "^2.2.0",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "redux-mock-store": "^1.5.4"
